<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layoutRoot"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:text="@string/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/time_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/circletime"/>
    <Chronometer
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:format="%s"
        android:textSize="20sp"
        android:id="@+id/circlechronometer"/>

    <TextView
        android:text="@string/time_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crosstime"/>

    <Chronometer
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:format="%s"
        android:textSize="20sp"
        android:id="@+id/crosschronometer"/>

    <!-- draw game here-->
    <com.hwhollywu.tictactoe.view.TicTacToeView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/start_game"
        android:id="@+id/btnStart"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/clean_board"
        android:id="@+id/btnClear"/>


</LinearLayout>

</ScrollView>
